Fix close button color on iOS Safari

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,6 +92,7 @@ select, input, .button {
 
 .type[value=Close] {
     float: left;
+    color: #000;
 }
 
 
